--- a/index.html
+++ b/index.html
@@ -58,7 +58,45 @@
                 <use href="./images/icons.svg#cross"></use>
               </svg>
             </button>
-            <form class="register-form" name="register form" autocomplete="on"></form>
+            <form class="register-form" name="register form" >
+      <strong class="register-form-title">Залиште свої дані, ми вам передзвонимо</strong>
+<div class="register-form-group" role="group">
+  <label class="register-form-field">
+    <span class="register-form-label">Ім'я</span>
+    <input type="text" 
+    name="" />
+    <svg width="18" height="18">
+      <use href=""></use>
+    </svg>
+  </label>
+  <label class="register-form-field">
+    <span class="register-form-label">Телефон</span>
+    <input type="text" 
+    name="" />
+    <svg width="18" height="18">
+      <use href=""></use>
+    </svg>
+  </label>
+  <label class="register-form-field">
+    <span class="register-form-label">Пошта</span>
+    <input type="email" 
+    name="" />
+    <svg width="18" height="18">
+      <use href=""></use>
+    </svg>
+  </label>
+
+  <label class="register-form-field">
+    <textarea name="" 
+    rows="5" 
+    placeholder="Введіть текст">
+  </textarea>
+  </label>
+</div>
+<buttom type="submit"></buttom>
+
+
+            </form>
           </div>
         </div>
       </section>
