--- a/portfolio.html
+++ b/portfolio.html
@@ -265,6 +265,20 @@
             </li>
           </ul>
       </div>
+      <div class="footer-form">
+          <p class="footer-form-p">Підпишіться на розсилку</p>
+          <div class="footer-form-flex">
+            <form action="#" class="footer-form-relativ">
+              <input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+              <button type="submit" class="footer-form-button">
+                Підписатися
+                <svg class="footer-form-img" width="24" height="24" >
+                  <use  href="./images/icons.svg#icon-send"></use>
+                </svg>
+              </button>
+            </form>
+          </div>
+        </div>
       </div>
     </footer>
 </body>
