--- a/index.html
+++ b/index.html
@@ -94,10 +94,8 @@
               </div>
     
               <label class="register-form-agreement">
-                <input class="register-form-checkbox visually-hidden" type="checkbox" name="" id="" />
-                <svg class="register-form-icons" width="18" height="18">
-                  <use class="icon-checked" href="./images/icons.svg#icon-check
-                  "></use>
+                <input class="register-form-checkbox" type="checkbox" name="" id="" />
+                <svg class="register-form-icons visually-hidden" width="16" height="15">
                   <use class="icon-unchecked" href="./images/icons.svg#Vector"></use>
                 </svg>
                 <span class="register-form-desk">Погоджуюся з розсилкою та приймаю 
@@ -394,7 +392,9 @@
           <p class="footer-form-p">Підпишіться на розсилку</p>
           <div class="footer-form-flex">
             <form action="#" class="footer-form-relativ">
+              <label class="mail">
               <input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+              </label>
               <button type="submit" class="footer-form-button">
                 Підписатися
                 <svg class="footer-form-img" width="24" height="24" >
