--- a/portfolio.html
+++ b/portfolio.html
@@ -269,7 +269,9 @@
           <p class="footer-form-p">Підпишіться на розсилку</p>
           <div class="footer-form-flex">
             <form action="#" class="footer-form-relativ">
+              <label class="mail">
               <input type="email" name="email" class="footer-form-email" placeholder="E-mail" />
+              </label>
               <button type="submit" class="footer-form-button">
                 Підписатися
                 <svg class="footer-form-img" width="24" height="24" >
